--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Free Notion Widgets</title>
+</head>
+<body>
+    
+    <a href="widgets/clocks/clock.html">Clocks</a>
+</body>
+</html>
 
