--- a/widgets/clocks/clock.html
+++ b/widgets/clocks/clock.html
@@ -1,1 +1,11 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Free Notion Widgets</title>
+</head>
+<body>
+    
+    <a href="clock1.html">Clock 1</a>
+</body>
+</html>
