--- a/widgets/clocks/clock1.html
+++ b/widgets/clocks/clock1.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <style>
      html {
-  background: #2F3438;
+  background: rgb(25, 25, 25);
   text-align: center;
   font-size: 10px;
 }
@@ -35,7 +35,7 @@ body {
 }
 .outer-clock-face {
   position: relative;
-  background: #2F3438;
+  background: rgb(25, 25, 25);
   overflow: hidden;
   width: 100%;
   height: 100%;
@@ -93,7 +93,7 @@ body {
   left: 10%;
   width: 80%;
   height: 80%;
-  background: #2F3438;
+  background: rgb(25, 25, 25);
   -webkit-border-radius: 100%;
   -moz-border-radius: 100%;
   border-radius: 100%;
