--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     
     <a href="widgets/clocks/clock.html">Clocks</a>
-        <a href="widgets/clocks/timer.html">Timer</a>
+        <a href="widgets/timers/timer.html">Timer</a>
 </body>
 </html>
 
