--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <a href="widgets/clocks/clock.html">Clocks</a>
         <a href="widgets/timers/timer.html">Timer</a>
-      <a href="widgets/timers/timer.html">quote</a>
+      <a href="widgets/quote/quote.html">quote</a>
 </body>
 </html>
 
